@@ -4,6 +4,9 @@ Shlomi Fish <shlomif@cpan.org>
 :Date: 2009-09-05
 :Revision: $Id$
 
+1. Add the +--show-exceeded-limits+ / +-sel+ flag that removes ambiguity
+in the output.
+
 Version 3.10.0: (15-Jan-2012)
 -----------------------------
 
